...
//                    icon = Icons.Rounded.Headset,
//                )
                DrawerMenuItem(
                    onClick = { onNavigate(HomeRoutes.Settings.route) },
                    label = stringResource(R.string.settings_screen_title),
                    icon = Icons.Rounded.Settings,
                    modifier = Modifier.testTag("menuSettings")
                )
                DrawerMenuItem(
                    onClick = { onNavigate(HomeRoutes.Help.route + "/page${R.string.menu_help_and_tutorials}") },
                    label = stringResource(R.string.menu_help_and_tutorials),
                    Icons.AutoMirrored.Rounded.HelpOutline,
                    modifier = Modifier.testTag("menuHelpAndTutorials")
...
